--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Chartify</title>
+	<link rel="stylesheet" href="./../main.css">
 </head>
 <body>
 	<div id="app"></div>
