--- a/example/index.html
+++ b/example/index.html
@@ -4,8 +4,15 @@
 	<meta charset="UTF-8">
 	<title>Chartify</title>
 	<link rel="stylesheet" type="text/css" href="/styles/main.css" />
+	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
+	<a href="https://github.com/kirillstepkin/chartify" target="_blank" id="github-ribbon"><img alt="Fork me on GitHub" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+
+	<header class="container">
+		<h2>React.js plugin for creating charts.</h2>		
+	</header>
+
 	<div id="app"></div>
 
 	<script src="/bundle.js"></script>
