--- a/example/index.html
+++ b/example/index.html
@@ -9,11 +9,13 @@
 <body>
 	<a href="https://github.com/kirillstepkin/chartify" target="_blank" id="github-ribbon"><img alt="Fork me on GitHub" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
-	<header class="container">
+	<header class="container text-center">
 		<h2>React.js plugin for creating charts.</h2>		
 	</header>
 
-	<div id="app"></div>
+	<main class="container">
+		<div id="app" class="text-center"></div>
+	</main>
 
 	<script src="/bundle.js"></script>
 </body>
