--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Chartify</title>
-	<link rel="stylesheet" type="text/css" href="/styles/main.css" />
+	<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
@@ -17,6 +17,6 @@
 		<div id="app" class="text-center"></div>
 	</main>
 
-	<script src="/bundle.js"></script>
+	<script src="dist/bundle.js"></script>
 </body>
 </html>
