--- a/example/index.html
+++ b/example/index.html
@@ -2,20 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Chartify</title>
+	<title>Chartify - React.js chart component</title>
 	<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
-	<a href="https://github.com/kirillstepkin/chartify" target="_blank" id="github-ribbon"><img alt="Fork me on GitHub" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+	<span id="forkongithub"><a href="https://github.com/kirillstepkin/chartify" target="_blank">Fork me on GitHub</a></span>
 
 	<header class="container text-center">
-		<h2>React.js plugin for creating charts.</h2>		
+		<h2>React.js chart component</h2>
+		<h4>Simple, ultra lightweight (<1kb!) & customizable React.js chart library</h4>	
 	</header>
 
 	<main class="container">
 		<div id="app" class="text-center"></div>
+	
+		<div class="gh text-center">
+			<iframe src="https://ghbtns.com/github-btn.html?user=kirillstepkin&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
+
+			<iframe src="https://ghbtns.com/github-btn.html?user=kirillstepkin&repo=chartify&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+
+			<iframe src="https://ghbtns.com/github-btn.html?user=kirillstepkin&repo=chartify&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+		</div>
 	</main>
+
+	<footer class="container">
+		<div class="text-center">Made with love. Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
+	</footer>
 
 	<script src="dist/bundle.js"></script>
 </body>
