--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
-	<span id="forkongithub"><a href="https://github.com/kirillstepkin/chartify" target="_blank">Fork me on GitHub</a></span>
+	<span id="forkongithub"><a href="https://github.com/kisqin/chartify" target="_blank">Fork me on GitHub</a></span>
 
 	<header class="container text-center">
 		<h2>React.js chart component</h2>
@@ -18,11 +18,11 @@
 		<div id="app" class="text-center"></div>
 	
 		<div class="gh text-center">
-			<iframe src="https://ghbtns.com/github-btn.html?user=kirillstepkin&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
+			<iframe src="https://ghbtns.com/github-btn.html?user=kisqin&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
 
-			<iframe src="https://ghbtns.com/github-btn.html?user=kirillstepkin&repo=chartify&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
+			<iframe src="https://ghbtns.com/github-btn.html?user=kisqin&repo=chartify&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
 
-			<iframe src="https://ghbtns.com/github-btn.html?user=kirillstepkin&repo=chartify&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
+			<iframe src="https://ghbtns.com/github-btn.html?user=kisqin&repo=chartify&type=fork&count=true&size=large" frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
 		</div>
 	</main>
 
