--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Chartify - React.js chart component</title>
-	<link rel="stylesheet" type="text/css" href="styles/main.css" />
+	<link rel="stylesheet" type="text/css" href="./dist/main.css" />
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
@@ -30,6 +30,6 @@
 		<div class="text-center">Made with love. Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
 	</footer>
 
-	<script src="dist/bundle.js"></script>
+	<script src="./dist/bundle.js"></script>
 </body>
 </html>
