--- a/example/index.html
+++ b/example/index.html
@@ -15,7 +15,7 @@
 	</header>
 
 	<main class="container">
-		<div id="app" class="text-center"></div>
+		<div id="app"></div>
 	
 		<div class="gh text-center">
 			<iframe src="https://ghbtns.com/github-btn.html?user=kisqin&type=follow&count=true&size=large" frameborder="0" scrolling="0" width="220px" height="30px"></iframe>
