--- a/example/index.html
+++ b/example/index.html
@@ -10,8 +10,13 @@
 	<span id="forkongithub"><a href="https://github.com/kisqin/chartify" target="_blank">Fork me on GitHub</a></span>
 
 	<header class="container text-center">
-		<h2>React.js chart component</h2>
-		<h4>Simple, ultra lightweight (<1kb!) & customizable React.js chart library</h4>	
+		<div class="project-logo">
+			<img src="./img/logo.png" alt="">
+		</div>
+		<div class="project-title">
+			<h2>React.js chart component</h2>
+			<h4>Simple, ultra lightweight (<1kb!) & customizable React.js chart library</h4>
+		</div>	
 	</header>
 
 	<main class="container">
