--- a/example/index.html
+++ b/example/index.html
@@ -14,8 +14,8 @@
 			<img src="./img/logo.png" alt="">
 		</div>
 		<div class="project-title">
-			<h2>React.js chart component</h2>
-			<h4>Simple, ultra lightweight (<1kb!) & customizable React.js chart library</h4>
+			<h2>React.js music chart</h2>
+			<h4>Simple, lightweight & customizable React.js animated draggable chart library</h4>
 		</div>	
 	</header>
 
