--- a/example/index.html
+++ b/example/index.html
@@ -11,8 +11,8 @@
 
 	<header class="container text-center">
 		<div class="project-title">
-			<h2>React.js music chart</h2>
-			<h4>Simple, lightweight & customizable React.js animated draggable chart library</h4>
+			<h2>Chartify</h2>
+			<h4>React.js plugin for building animated draggable and customizable charts</h4>
 		</div>	
 	</header>
 
