replace map files

--- a/example/index.html
+++ b/example/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Chartify - React.js chart component</title>
-	<link rel="stylesheet" type="text/css" href="./dist/main.css" />
+	<link rel="stylesheet" type="text/css" href="./dist/app.css" />
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
