--- a/example/index.html
+++ b/example/index.html
@@ -21,7 +21,7 @@
 	</main>
 
 	<footer class="container">
-		<div class="text-center">Made with love. Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
+		<div class="text-center">Made with <img class="heart" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Love_Heart_symbol.svg/2000px-Love_Heart_symbol.svg.png" title="love" /> Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
 	</footer>
 
 	<script src="./dist/bundle.js"></script>
