--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
 		<div class="project-title">
 			<h2>Chartify</h2>
 			<h4>React.js plugin for building animated draggable and customizable charts</h4>
-		</div>	
+		</div>
 	</header>
 
 	<main class="container">
@@ -24,6 +24,6 @@
 		<div class="text-center">Made with <img class="heart" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Love_Heart_symbol.svg/2000px-Love_Heart_symbol.svg.png" title="love" /> Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
 	</footer>
 
-	<script src="./dist/bundle.js"></script>
+	<script src="./dist/app.js"></script>
 </body>
 </html>
