update versions. add react fragment

--- a/example/index.html
+++ b/example/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
-	<span id="forkongithub"><a href="https://github.com/kiqs/chartify" target="_blank">Fork me on GitHub</a></span>
+	<span id="forkongithub"><a href="https://github.com/kis/chartify" target="_blank">Fork me on GitHub</a></span>
 
 	<header class="container text-center">
 		<div class="project-title">
