--- a/example/index.html
+++ b/example/index.html
@@ -10,7 +10,7 @@
 	<span id="forkongithub"><a href="https://github.com/kis/chartify" target="_blank">Fork me on GitHub</a></span>
 
 	<div class="root-container">
-		<header class="container text-center">
+		<header class="container">
 			<div class="project-title">
 				<h2>Chartify</h2>
 				<h4>React.js plugin for building animated draggable and customizable charts</h4>
@@ -22,7 +22,7 @@
 		</main>
 
 		<footer class="container">
-			<div class="text-center">Made with <img class="heart" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Love_Heart_symbol.svg/2000px-Love_Heart_symbol.svg.png" title="love" /> Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
+			<div>Made with <img class="heart" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Love_Heart_symbol.svg/2000px-Love_Heart_symbol.svg.png" title="love" /> Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
 		</footer>
 	</div>
 
