--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
 		<header class="container">
 			<div class="project-title">
 				<h2>Chartify</h2>
-				<h4>React.js plugin for building animated draggable and customizable charts</h4>
+				<h4>React.js plugin for building customizable charts</h4>
 			</div>
 		</header>
 
