add css modules

--- a/example/index.html
+++ b/example/index.html
@@ -7,24 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 </head>
 <body>
-	<span id="forkongithub"><a href="https://github.com/kis/chartify" target="_blank">Fork me on GitHub</a></span>
-
-	<div class="root-container">
-		<header class="container">
-			<div class="project-title">
-				<h2>Chartify</h2>
-				<h4>React.js plugin for building customizable charts</h4>
-			</div>
-		</header>
-
-		<main class="container">
-			<div id="app"></div>
-		</main>
-
-		<footer class="container">
-			<div>Made with <img class="heart" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c8/Love_Heart_symbol.svg/2000px-Love_Heart_symbol.svg.png" title="love" /> Inspired by <a href="http://kinopoisk.ru" target="_blank">kinopoisk</a></div>
-		</footer>
-	</div>
+	<div id="root"></div>
 
 	<script src="./dist/app.js"></script>
 </body>
