add meta http-equiv

--- a/example/index-dev.html
+++ b/example/index-dev.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="refresh" content="0; URL=https://chartify.github.io/chartify/example/">
 	<title>Chartify - React.js chart component</title>
 	<link rel="stylesheet" type="text/css" href="./dist/app.css" />
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
